--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 /* Flexbox Part 1 */
 
 #flex-section1 ul {
-
+	padding-left: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	list-style: none;
+	margin: 0;
 }
 
 /* end Flexbox Part 1 */
