--- a/styles.css
+++ b/styles.css
@@ -15,23 +15,30 @@
 /* Flexbox Part 2 */
 
 #flex-section2 ul {
-
+	display: flex;
+	flex-direction: row;
+	flex-basis: 0px;
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
 }
 
 #flex-section2 li {
-
+	flex-grow: 1;
+	flex-shrink: 1;
+	flex-basis: 0;
 }
 
 #flex-section2 .item1 {
-
+	order: 1;
 }
 
 #flex-section2 .item2 {
-
+	order: 3;
 }
 
 #flex-section2 .item3 {
-
+	order: 2;
 }
 
 /* end Flexbox Part 2 */
