--- a/styles.css
+++ b/styles.css
@@ -81,11 +81,17 @@
 /* Grid Part 2 */
 
 #grid-section2 .gridboxblue {
-
+	grid-column-start: 2;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 4;
+	z-index: 1;
 }
 
 #grid-section2 .gridboxred {
-
+	grid-column-start: 1;
+	grid-row-start: 2;
+	grid-column-end: 3;
 }
 
 /* end Grid Part 2 */
