--- a/styles.css
+++ b/styles.css
@@ -100,23 +100,31 @@
 /* Grid Part 3 */
 
 #grid-section3 .grid {
-
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	grid-template-rows: 100px 300px 100px;
+	column-gap: 10px;
+	row-gap: 10px;
 }
 
 #grid-section3 .box1 {
-
+	grid-column-start: 1;
+	grid-column-end: 3;
+	order: 1;
 }
 
 #grid-section3 .box2 {
-
+	order: 3;
 }
 
 #grid-section3 .box3 {
-
+	order: 2;
 }
 
 #grid-section3 .box4 {
-
+	grid-column-start: 1;
+	grid-column-end: 3;
+	order: 4;
 }
 
 /* end Grid Part 3 */
