--- a/styles.css
+++ b/styles.css
@@ -138,15 +138,13 @@
 	color: #000;
 	padding: 20px;
 	text-decoration: none;
-
-
+	transition: color, background-color 3s linear;
 }
 
 #transition-section .box a:hover {
 	background-color: #cc0000;
 	color: #fff;
-
-
+	transition: color, background-color 0.5s linear;
 }
 
 /* end Transition Part */
